# workflow-training

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: main.yml  sayhello.yml
